--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,6 +46,7 @@
 @import "project/p-order-success";
 @import "project/p-payments";
 @import "project/p-checkout";
+@import "project/p-product-details";
 
 
 //-------------------------------------------
