--- a/sass/project/_p-shopping-cart.scss
+++ b/sass/project/_p-shopping-cart.scss
@@ -66,6 +66,7 @@
                         line-height: calc(40/750*100vw);
                         color: #333333;
                         border: none;
+                        border-radius: 0;
                         border-left: calc(2/750*100vw) solid #dddddd;
                         border-right: calc(2/750*100vw) solid #dddddd;
 					}
@@ -110,7 +111,7 @@
                         }
 					}
 				}
-                &__qty2{
+                .quantity{
                     display: flex;
                     width: calc(180/750*100vw);
                     height: calc(70/750*100vw);
